--- a/monty_hall_MC.ipynb
+++ b/monty_hall_MC.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explaination\n",
+    "### Explanation\n",
     "\n",
     "Keep the winning door at 0, and let's list all cases:\n",
     "\n",
@@ -80,16 +80,27 @@
     "7. choose 2, open 1, switch to 0: win\n",
     "8. choose 2, open 1, stay in 2: lose\n",
     "\n",
-    "Let's call $P(W)$ the probability of winning, and $P(i)=\\frac13$ the probability of choosing door $i$. The 8 listed events do not have the same chance to happen, because of the statement about the $P(i)$'s. So:\n",
+    "Call $\\mathbb P(W)$ the probability of winning, and $\\mathbb P(i)=\\frac13$ the probability of choosing door $i$. The 8 listed events do not have the same chance to happen, because of the statement about $\\{\\mathbb P(i)\\}$. So:\n",
+    "$$\\mathbb P(W) = \\mathbb P(W|0)\\mathbb P(0)+\\mathbb P(W|1)\\mathbb P(1)+\\mathbb P(W|2)\\mathbb P(2)=\\frac12\\frac13+\\frac12\\frac13+\\frac12\\frac13=\\frac12,$$\n",
+    "and this is happening only because we allow switching door. If we didn't, one would have to measure the $\\mathbb P(W|i)$ only given the cases 3,4,6, and 8, meaning that $\\mathbb P(W|0)=1$ and $\\mathbb P(W|2\\text{ or }3)=0$, and by consequence $\\mathbb P(W)$ would be equal to just $\\frac13$. By introducing switching the game becomes fair.\n",
     "\n",
-    "$$P(W) = P(W|0)P(0)+P(W|1)P(1)+P(W|2)P(2)=\\frac12\\frac13+\\frac12\\frac13+\\frac12\\frac13=\\frac12,$$\n",
+    "Note:\n",
+    "$$\\mathbb P(W\\cap\\text{switch})=\\mathbb P(W\\cap\\text{switch}|0)\\mathbb P(0)+\\mathbb P(W\\cap\\text{switch}|1)\\mathbb P(1)+\\mathbb P(W\\cap\\text{switch}|2)\\mathbb P(2)=0\\frac13+\\frac12\\frac 13+\\frac12\\frac13=\\frac13,$$\n",
+    "$$\\mathbb P(W\\cap\\text{stay})=\\mathbb P(W\\cap\\text{stay}|0)\\mathbb P(0)+\\mathbb P(W\\cap\\text{stay}|1)\\mathbb P(1)+\\mathbb P(W\\cap\\text{stay}|2)\\mathbb P(2)=\\frac12\\frac13+0\\frac 13+0\\frac13=\\frac16,$$\n",
+    "meaning that _before starting playing_, switching is already a promising option, because it actually carries most of the chance of winning than if staying.\n",
     "\n",
-    "and this is happening only because we allow switching door. If we didn't, one would have to measure the $P(W|i)$ only given the cases 3,4,6, and 8, meaning that $P(W|0)=1$ and $P(W|2\\text{ or }3)=0$. By introducing switching, the situation is absolutely symmetric. Allowing switching is a gift to the player.\n",
-    "\n",
-    "But, what if one always switches? The propability of winning conditioned over switching is:\n",
-    "\n",
-    "$$P(W|S)=P(W|S|0)P(0)+P(W|S|1)P(1)+P(W|S|2)P(2)=0\\frac 13+1\\frac13+1\\frac13.$$"
+    "_After_ one switches (that is, conditional probability):\n",
+    "$$\\mathbb P(W|\\text{switch})=\\mathbb P(W|\\text{switch}|0)\\mathbb P(0)+\\mathbb P(W|\\text{switch}|1)\\mathbb P(1)+\\mathbb P(W|\\text{switch}|2)\\mathbb P(2)=0\\frac 13+1\\frac13+1\\frac13=\\frac23,$$\n",
+    "or\n",
+    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}=\\frac 13\\bigg/\\frac12=\\frac23.$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
