finally fixed the expression for the conditional probability at last line, full expression

--- a/monty_hall_MC.ipynb
+++ b/monty_hall_MC.ipynb
@@ -90,17 +90,16 @@
     "meaning that _before starting playing_, switching is already a promising option, because it actually carries most of the chance of winning than if staying.\n",
     "\n",
     "_After_ one switches (that is, conditional probability):\n",
-    "$$\\mathbb P(W|\\text{switch})=\\mathbb P(W|\\text{switch}|0)\\mathbb P(0)+\\mathbb P(W|\\text{switch}|1)\\mathbb P(1)+\\mathbb P(W|\\text{switch}|2)\\mathbb P(2)=0\\frac 13+1\\frac13+1\\frac13=\\frac23,$$\n",
-    "or\n",
-    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}=\\frac 13\\bigg/\\frac12=\\frac23.$$"
+    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}=\\frac 13\\bigg/\\frac12=\\frac23.$$\n",
+    "\n",
+    "The complete unrolled expression reads:\n",
+    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}\n",
+    "=\\frac{\\mathbb P(W\\cap\\text{switch}\\cap(0\\cup 1\\cup 2))}{\\mathbb P(\\text{switch})}\n",
+    "=\\frac{\\sum_i\\mathbb P(W\\cap\\text{switch}\\cap i)}{\\mathbb P(\\text{switch})}\n",
+    "=\\frac{\\sum_i\\mathbb P(W|\\text{switch}\\cap i)\\mathbb P(\\text{switch}| i)\\mathbb P(i)}{\\mathbb P(\\text{switch})}\n",
+    "\\\\=\\frac{\\sum_i\\mathbb P(W|\\text{switch}\\cap i)\\frac12 \\frac13}{\\frac12}\n",
+    "=\\frac13\\sum_i\\mathbb P(W|\\text{switch}\\cap i)=\\frac13\\left(0+1+1\\right)=\\frac23$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
