even more makeup

--- a/monty_hall_MC.ipynb
+++ b/monty_hall_MC.ipynb
@@ -69,36 +69,27 @@
    "source": [
     "### Explanation\n",
     "\n",
-    "Keep the winning door at 0, and let's list all cases:\n",
+    "Keep the winning door at 0, and let's list all cases, or build the sample space $\\Omega:=\\{\\omega_i\\}_{i=1}^6$, where $\\mathbb P(\\omega_i)=\\frac16,\\,i=1,..,6$:\n",
     "\n",
-    "1. choose 0, open 1, switch to 2: lose\n",
-    "2. choose 0, open 2, switch to 1: lose\n",
-    "3. choose 0, open 1, stay in 0: win\n",
-    "4. choose 0, open 2, stay in 0: win\n",
-    "5. choose 1, open 2, switch to 0: win\n",
-    "6. choose 1, open 2, stay in 1: lose\n",
-    "7. choose 2, open 1, switch to 0: win\n",
-    "8. choose 2, open 1, stay in 2: lose\n",
+    "1. $\\omega_1$: choose 0, switch: lose\n",
+    "2. $\\omega_2$: choose 0, keep: win\n",
+    "3. $\\omega_3$: choose 1, switch: win\n",
+    "4. $\\omega_4$: choose 1, keep: lose\n",
+    "5. $\\omega_5$: choose 2, switch: win\n",
+    "6. $\\omega_6$: choose 2, keep: lose\n",
+    "    \n",
+    "It is clear already that, switching appears three (equiprobable) times, while switching and winning appears two times, so switching implies more chances to win than to lose, with a ratio 2:1.\n",
     "\n",
-    "Call $\\mathbb P(W)$ the probability of winning, and $\\mathbb P(i)=\\frac13$ the probability of choosing door $i$. The 8 listed events do not have the same chance to happen, because of the statement about $\\{\\mathbb P(i)\\}$. So:\n",
-    "$$\\mathbb P(W) = \\mathbb P(W|0)\\mathbb P(0)+\\mathbb P(W|1)\\mathbb P(1)+\\mathbb P(W|2)\\mathbb P(2)=\\frac12\\frac13+\\frac12\\frac13+\\frac12\\frac13=\\frac12,$$\n",
-    "and this is happening only because we allow switching door. If we didn't, one would have to measure the $\\mathbb P(W|i)$ only given the cases 3,4,6, and 8, meaning that $\\mathbb P(W|0)=1$ and $\\mathbb P(W|2\\text{ or }3)=0$, and by consequence $\\mathbb P(W)$ would be equal to just $\\frac13$. By introducing switching the game becomes fair.\n",
+    "One can proceed more formally. The sample space can be partitioned in different ways: win or lose ($W:=\\{\\omega_2,\\omega_3,\\omega_5\\}$ vs $L:=\\{\\omega_1,\\omega_4,\\omega_6\\}$); switch or keep ($S:=\\{\\omega_1,\\omega_3,\\omega_5\\}$ vs $K:=\\{\\omega_2,\\omega_4,\\omega_6\\}$); choose door 0, 1, or 2  ($0:=\\{\\omega_1,\\omega_2\\}$ vs $1:=\\{\\omega_3,\\omega_4\\}$ vs $2:=\\{\\omega_5,\\omega_6\\}$); The intersections between these subsets individuate the different events.\n",
+    "\n",
+    "By direct observation, $\\mathbb P(W)=\\frac12$, and this is happening only because we allow switching door. If we didn't, one would have to measure it only given the cases 2,4,6, meaning that $\\mathbb P(W)=\\frac13$. By introducing switching the game becomes fair.\n",
     "\n",
     "Note:\n",
-    "$$\\mathbb P(W\\cap\\text{switch})=\\mathbb P(W\\cap\\text{switch}|0)\\mathbb P(0)+\\mathbb P(W\\cap\\text{switch}|1)\\mathbb P(1)+\\mathbb P(W\\cap\\text{switch}|2)\\mathbb P(2)=0\\frac13+\\frac12\\frac 13+\\frac12\\frac13=\\frac13,$$\n",
-    "$$\\mathbb P(W\\cap\\text{stay})=\\mathbb P(W\\cap\\text{stay}|0)\\mathbb P(0)+\\mathbb P(W\\cap\\text{stay}|1)\\mathbb P(1)+\\mathbb P(W\\cap\\text{stay}|2)\\mathbb P(2)=\\frac12\\frac13+0\\frac 13+0\\frac13=\\frac16,$$\n",
+    "$$\\mathbb P(W\\cap S)=\\mathbb P(\\{\\omega_3,\\omega_5\\})=\\frac13\\qquad\\mathbb P(W\\cap K)=\\mathbb P(\\{\\omega_2\\})=\\frac16,$$\n",
     "meaning that _before starting playing_, switching is already a promising option, because it actually carries most of the chance of winning than if staying.\n",
     "\n",
     "_After_ one switches (that is, conditional probability):\n",
-    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}=\\frac 13\\bigg/\\frac12=\\frac23.$$\n",
-    "\n",
-    "The complete unrolled expression reads:\n",
-    "$$\\mathbb P(W|\\text{switch})=\\frac{\\mathbb P(W\\cap\\text{switch})}{\\mathbb P(\\text{switch})}\n",
-    "=\\frac{\\mathbb P(W\\cap\\text{switch}\\cap(0\\cup 1\\cup 2))}{\\mathbb P(\\text{switch})}\n",
-    "=\\frac{\\sum_i\\mathbb P(W\\cap\\text{switch}\\cap i)}{\\mathbb P(\\text{switch})}\n",
-    "=\\frac{\\sum_i\\mathbb P(W|\\text{switch}\\cap i)\\mathbb P(\\text{switch}| i)\\mathbb P(i)}{\\mathbb P(\\text{switch})}\n",
-    "\\\\=\\frac{\\sum_i\\mathbb P(W|\\text{switch}\\cap i)\\frac12 \\frac13}{\\frac12}\n",
-    "=\\frac13\\sum_i\\mathbb P(W|\\text{switch}\\cap i)=\\frac13\\left(0+1+1\\right)=\\frac23$$"
+    "$$\\mathbb P(W|S)=\\frac{\\mathbb P(W\\cap S)}{\\mathbb P(S)}=\\frac{\\mathbb P(\\{\\omega_3,\\omega_5\\})}{\\mathbb P(\\{\\omega_1,\\omega_3,\\omega_5\\})}=\\frac 13\\bigg/\\frac12=\\frac23.$$"
    ]
   }
  ],
