--- a/die_game.ipynb
+++ b/die_game.ipynb
@@ -18,6 +18,8 @@
    "source": [
     "# Dice game stopping at any perfect square\n",
     "\n",
+    "Asked during interview.\n",
+    "\n",
     "Throw a dice and sup up the draws until the sum is a perfect square, or you stop the game winning the budget.\n",
     "\n",
     "Q1: _say you survived till some $b$, do you keep throwing?_\n",
