final version darts problem in the same half - recursion fixed

--- a/n_darts_in_the_same_half.ipynb
+++ b/n_darts_in_the_same_half.ipynb
@@ -29,39 +29,20 @@
     "In our case $x=\\frac12$, so\n",
     "$$\\mathbb P\\left(\\theta_{(n)}-\\theta_{(1)} < \\frac12\\right)+(n-1)\\mathbb P\\left(\\theta_{(i)}-\\theta_{(i-1)}>\\frac12\\right)=\\frac n{2^{n-1}}.$$\n",
     "\n",
-    "Another possible proof comes from this idea: call $\\mathbb P(n)$ the probability that $n$ darts lie in the same half of the target.\n",
-    "Set up the following recursion:\n",
-    "$$\\mathbb P(n)=\\mathbb P(n\\cap n-1)=\\mathbb P(n|n-1)\\mathbb P(n-1)=\\mathbb P(n|n-1)\\mathbb P(n-1|n-2)..\\mathbb P(3|2)\\mathbb P(2),\\quad \\mathbb P(2)=1.$$\n",
-    "As they are uniformly distributed between 0 and half circle, the $n$-th dart should not be fallen on the opposite slice comprised between the first and the last dart, the $n-1$-th.\n",
-    "Imagine that the first dart corresponds to $X_{(0)}$ and the $n-1$-th to $X_{(n-2)}$.\n",
-    "Then:\n",
-    "$$\\mathbb P(n|n-1)=1-\\mathbb E\\left[X_{(n-2)}-X_{(0)}\\right]=1-\\mathbb E\\left[X_{(n-2)}-X_{(1)}\\right]-\\mathbb E\\left[X_{(1)}-X_{(0)}\\right].$$\n",
-    "The first expectation is the expected value of the range of $n-2$ order statistics distributed between 0 and $\\frac12$.\n",
-    "Transform the density of the range in $[0,1)$ and integrate:\n",
-    "$$ \\mathbb E\\left[X_{(n-2)}-X_{(1)}\\right] = \\frac{n-2}{2(n-1)}.$$\n",
-    "The second expectation is the expected value of the gap between two order statistics of a population of $n-2$ of them, on a range from 0 to $\\frac12$.\n",
-    "$$\\mathbb E\\left[X_{(1)}-X_{(0)}\\right]=\\frac1{2(n-1)}.$$\n",
-    "$$\\mathbb P(n|n-1)=1-\\frac{n-2}{2(n-1)}-\\frac1{2(n-1)}=\\frac n{2(n-1)}.$$\n",
-    "Setting up the recursion:\n",
-    "$$\\mathbb P(n)=\\mathbb P(n|n-1)\\mathbb P(n-1|n-2)..\\mathbb P(3|2)\\mathbb P(2)=\\frac n{2(n-1)}\\frac {n-1}{2(n-2)}\\frac {n-2}{2(n-3)}..\\frac {3}{2\\cdot 2}=\\frac n{2\\cdot 2^{n-2}}=\\frac n{2^{n-1}}.$$\n",
-    "\n",
     "Comparing with a Monte Carlo approach (also added a cute CLT verification):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-b2366297dee5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0moutcome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgame\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mdarts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m360\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mdarts_diff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdarts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdarts_diff\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m180\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m180\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5027 0.5\n",
+      "verify CLT:  -2.3899499663255282e-15 0.7698894033948083\n"
      ]
     }
    ],
@@ -76,7 +57,7 @@
     "        outcome.append(1)\n",
     "    else:\n",
     "        outcome.append(0)\n",
-    "print(sum(outcome)/throws,N/2**(N-1))\n",
+    "print(sum(outcome)/100000,N/2**(N-1))\n",
     "        \n",
     "outcome = np.array(outcome)\n",
     "mean = np.array([])\n",
@@ -91,11 +72,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Another possible proof comes from this idea: call $\\mathbb P(n)$ the probability that $n$ darts lie in the same half of the target.\n",
+    "Set up the following recursion:\n",
+    "$$\\mathbb P(n)=\\mathbb P(n\\cap n-1)=\\mathbb P(n|n-1)\\mathbb P(n-1)=\\mathbb P(n|n-1)\\mathbb P(n-1|n-2)..\\mathbb P(3|2)\\mathbb P(2),\\quad \\mathbb P(2)=1.$$\n",
+    "As they are uniformly distributed between 0 and half circle, the $n$-th dart should not be fallen on the opposite slice comprised between the first and the last dart, the $n-1$-th.\n",
+    "Imagine that the first dart corresponds to $X_{(0)}$ and the $n-1$-th to $X_{(n-2)}$.\n",
+    "Then:\n",
+    "$$\\mathbb P(n|n-1)=1-\\mathbb E\\left[X_{(n-2)}-X_{(0)}\\right]=1-\\mathbb E\\left[X_{(n-2)}-X_{(1)}\\right]-\\mathbb E\\left[X_{(1)}-X_{(0)}\\right].$$\n",
+    "The first expectation is the expected value of the range of $n-2$ order statistics distributed between 0 and $\\frac12$.\n",
+    "Compute the probability density of the range in $[0,\\frac12)$ and find its expected value (see notes from Durham):\n",
+    "$$ \\mathbb E\\left[X_{(n-2)}-X_{(1)}\\right] = \\frac{n-3}{2(n-1)}.$$\n",
+    "The second expectation is the expected value of the gap between two order statistics of a population of $n-2$ of them, on a range from 0 to $\\frac12$.\n",
+    "$$\\mathbb E\\left[X_{(1)}-X_{(0)}\\right]=\\frac1{2(n-1)}.$$\n",
+    "$$\\mathbb P(n|n-1)=1-\\frac{n-3}{2(n-1)}-\\frac1{2(n-1)}=\\frac n{2(n-1)}.$$\n",
+    "Setting up the recursion:\n",
+    "$$\\mathbb P(n)=\\mathbb P(n|n-1)\\mathbb P(n-1|n-2)..\\mathbb P(3|2)\\mathbb P(2)=\\frac n{2(n-1)}\\frac {n-1}{2(n-2)}\\frac {n-2}{2(n-3)}..\\frac {3}{2\\cdot 2}=\\frac n{2\\cdot 2^{n-2}}=\\frac n{2^{n-1}}.$$"
+   ]
   }
  ],
  "metadata": {
